<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:orderInCategory="1"
        android:title="@string/detail_menu_item"
        app:showAsAction="never" />

    <item
        android:orderInCategory="2"
        android:title="@string/delete_menu_item"
        app:showAsAction="never" />

    <item
        android:orderInCategory="3"
        android:title="@string/move_menu_item"
        app:showAsAction="never" />

    <item
        android:orderInCategory="4"
        android:title="@string/copy_menu_item"
        app:showAsAction="never" />

    <item
        android:orderInCategory="5"
        android:title="@string/paste_menu_item"
        app:showAsAction="never" />

    <item
        android:orderInCategory="6"
        android:title="@string/rename_menu_item"
        app:showAsAction="never" />

</menu>